Updated UI and text changes

--- a/en.html
+++ b/en.html
@@ -422,7 +422,7 @@
 				<div class="container-fluid center">
 	                <p>  Our highly scalable and cost effective resources and our data production centers are present in all continents: Laos, Argentina, China, France, India, Lithuania, Mexico, Morocco,  Philippines, Romania, Tunisia, Vietnam, USA, Jordan </p>
 	                <p class="padded-big-top">  Our tools are entirely in the cloud which allow us to work</p>
-	                <h1 class="white">  24/7 - 7 days a week  </h1>
+	                <h1 class="white">  24H/24 - 7 days a week  </h1>
 	            </div>
 	        </div>
 			<div class="figures d-none d-md-block">
@@ -650,7 +650,6 @@
                     <div class="col-12 col-md-8">
                         <div class="form-group">
                             <textarea class="form-control" rows="10" placeholder="Message" name="entry.1301760924"></textarea>
-                            <span data-validate-for="content">Please enter your content</span>
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -711,10 +710,10 @@
                     Copyright © 2018 Manaty
                 </div>
                 <div class="col-3 col-md-1">
-                    <a href="en.html"><img class="flag selected" src="images/en.png" height="50px" width="50px"></a>
+                    <a href="/en"><img class="flag selected" src="images/en.png" height="50px" width="50px"></a>
                 </div>
                 <div class="col-3 col-md-1">
-                    <a href="fr.html"><img class="flag" src="images/fr.png" height="50px" width="50px"></a>
+                    <a href="/fr"><img class="flag" src="images/fr.png" height="50px" width="50px"></a>
                 </div>
 			</div>
 		</div>
