--- a/fr.html
+++ b/fr.html
@@ -136,21 +136,21 @@
 				<h1> Etude et Conception de Prototypes</h1>
 			</div>
 
-			<div class="service-icons-container" data-title="Web Developpement">
-				<div class="icon" data-description="<p>ous maîtrisons le développement de sites web et d'applications web pour des objectifs B2C et/ou B2B. </p>
-					  <p> Qu'il s'agisse de développer votre site web de zéro ou de le mettre à jour et le moderniser, nous vous apportons une solution centrée sur vos objectifs commerciaux. Nous maîtrisons tous les langages et technologies du web : Javascript, CSS responsive, PHP, JavaEE ainsi que la plupart des CMS et eShops...</p>
+			<div class="service-icons-container" data-title="Developpement Web">
+				<div class="icon" data-description="<p> Nous maîtrisons le développement de sites web et d'applications web pour des objectifs B2C et/ou B2B. </p>
+					  <p> Qu'il s'agisse de développer votre site web de zéro ou de le mettre à jour et le moderniser, nous vous apportons une solution centrée sur vos objectifs commerciaux. Nous maîtrisons tous les langages et technologies du web : Javascript, CSS responsive, PHP, JavaEE ainsi que la plupart des CMS et eShops.</p>
 					  <p> Nous pouvons aussi développer une application web sur-mesure qui répondra à vos besoins. Nous utilisons les dernières technologies en la matière : REST API, SSO, SQL & NoSQL, programmation asynchrone. </p>
-					  <p> Nous nous adaptons à votre projet pour:</p>
+					  <p> Nous nous adaptons à votre projet pour :</p>
 					  <ul>
 					  <li>Développer votre solution de A à Z</li>
 					  <li>Vous conseiller sur les meilleures technologies à utiliser à chaque étape</li>
 					  <li>Vous proposer un plan qualité sérieux</li>
 					  <li>Former votre équipe et s'assurer que vous maitriser votre nouvelle solution</li>
 					  <li>Vous accompagner dans vos futures évolutions et vous faire une offre de maintenance intéressante</li>
-					  </ul>" data-title="Web Developpement">
+					  </ul>" data-title="Developpement Web">
 					<img src="images/icon_webDev.png" alt="" class="img-responsive">
 				</div>
-				<h1>Web Developpement</h1>
+				<h1>Developpement <br /> Web</h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Developpement d applications Mobiles">
@@ -229,7 +229,7 @@
 				<h1> Etude et Conception de Prototypes</h1>
 			</div>
 
-			<div class="service-icons-container" data-title="Web developpement" data-toggle="modal" data-target="#modalServices">
+			<div class="service-icons-container" data-title="Developpement Web" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-description="<p>Nous maîtrisons le développement de sites web et d'applications web pour des objectifs B2C et/ou B2B. </p>
 					  <p> Qu'il s'agisse de développer votre site web de zéro ou de le mettre à jour et le moderniser, nous vous apportons une solution centrée sur vos objectifs commerciaux. Nous maîtrisons tous les langages et technologies du web : Javascript, CSS responsive, PHP, JavaEE ainsi que la plupart des CMS et eShops...</p>
 					  <p> Nous pouvons aussi développer une application web sur-mesure qui répondra à vos besoins. Nous utilisons les dernières technologies en la matière : REST API, SSO, SQL & NoSQL, programmation asynchrone. </p>
@@ -240,15 +240,15 @@
 					  <li>Vous proposer un plan qualité sérieux</li>
 					  <li>Former votre équipe et s'assurer que vous maitriser votre nouvelle solution</li>
 					  <li>Vous accompagner dans vos futures évolutions et vous faire une offre de maintenance intéressante</li>
-					  </ul>" data-title="Web developpement">
+				  	 </ul>" data-title="Developpement Web">
 					<img src="images/icon_webDev.png" alt="" class="img-responsive">
 				</div>
-				<h1>Web Developpement</h1>
+				<h1>Developpement Web</h1>
 			</div>
 
 			<div class="service-icons-container" data-title="developpement d applications mobiles" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-description="<p>Nous concevons et réalisons vos applications mobiles (smartphones et tablettes) qui s'adaptent à tous les systèmes d'exploitation (Android, iOS, Windows mobile) et répond à tous vos objectifs (applications générales B2C comme applications précises en B2B).</p>
-				  <p>Si cela répond à vos besoins commerciaux, nous pouvons porter votre application mobile afin qu'elle s'adapte facilement à n'importe navigateur web et sur n'importe quel écran. Nous connaissons toutes les interfaces, les manières d'interagir (contrôle visuel, contrôle vocal, écran interactif...) et les derniers frameworks (Appcelerator, Cordova...).</p>
+				<div class="icon" data-description="<p>Nous concevons et réalisons vos applications mobiles (smartphones et tablettes) qui s'adaptent à tous les systèmes d'exploitation (Android, iOS, Windows mobile) et répondent à tous vos objectifs (applications générales B2C comme applications précises en B2B).</p>
+				  <p>Si cela répond à vos besoins commerciaux, nous pouvons porter votre application mobile afin qu'elle s'adapte facilement à n'importe quel navigateur web et sur n'importe quel écran. Nous connaissons toutes les interfaces, les manières d'interagir (contrôle visuel, contrôle vocal, écran interactif...) et les derniers frameworks (Appcelerator, Cordova...).</p>
 				  <p> Nous nous adaptons à votre projet pour :</p>
 				  <ul>
 				  <li> Réaliser un prototype de votre application et valider avec vous vos choix techniques</li>
@@ -429,7 +429,7 @@
 				<div class="container-fluid center">
 	                <p>  Nos ressources évolutives et nos centres de production sont présents sur tous les continents : Laos, Argentine, Chine, France, Inde, Lituanie, Mexique, Maroc, Philippines, Roumanie, Tunisie, Vietnam, Etats-Unis, Jordanie. </p>
 	                <p class="padded-big-top">  Grâce à nos experts internationaux et nos outils sur le cloud nous pouvons travailler </p>
-	                <h1 class="white">  24/24 - 7 jours par semaine  </h1>
+	                <h1 class="white">  24H/24 - 7 jours par semaine  </h1>
 	            </div>
 	        </div>
 			<div class="figures d-none d-md-block">
@@ -592,7 +592,7 @@
 						<div class="form-group">
 							<input id="fullname" class="form-control" type="text" aria-describedby="fullnameBlock" name="entry.1588310062" placeholder="Nom *">
 							<small id="fullnameBlock" class="form-text text-muted red d-none">
-							  * Full name is required
+							  * Nom complet est requis
 							</small>
 						</div>
 
@@ -601,7 +601,7 @@
 						<div class="form-group">
 							<input id="email" class="form-control" type="text" aria-describedby="emailBlock" placeholder="Email *" name="entry.1684797069">
 							<small id="emailBlock" class="form-text text-muted red d-none">
-							  * Email is required
+							  * Email est requis
 							</small>
 						</div>
 					</div>
@@ -657,7 +657,7 @@
                     <div class="col-12 col-md-8">
                         <div class="form-group">
                             <textarea class="form-control" rows="10" placeholder="Message" name="entry.1301760924"></textarea>
-                            <span data-validate-for="content">Merci de renseigner les informations</span>
+
                         </div>
                     </div>
 					<div class="col-12 col-md-4 d-none d-md-block">
@@ -718,10 +718,10 @@
                     Copyright © 2018 Manaty
                 </div>
                 <div class="col-3 col-md-1">
-                    <a href="en.html"><img class="flag" src="images/en.png" height="50px" width="50px"></a>
+                    <a href="/en"><img class="flag" src="images/en.png" height="50px" width="50px"></a>
                 </div>
                 <div class="col-3 col-md-1">
-                    <a href="fr.html"><img class="flag selected" src="images/fr.png" height="50px" width="50px"></a>
+                    <a href="/fr"><img class="flag selected" src="images/fr.png" height="50px" width="50px"></a>
                 </div>
 			</div>
 		</div>
