--- a/fr.html
+++ b/fr.html
@@ -154,9 +154,9 @@
 			</div>
 
 			<div class="service-icons-container" data-title="Developpement d applications Mobiles">
-				<div class="icon" data-description="<p>Nous concevons et réalisons vos applications mobiles (smartphones et tablettes) qui s'adaptent à tous les systèmes d'exploitation (Android, iOS, Windows mobile) et répond à tous vos objectifs (applications générales B2C comme applications précises en B2B).</p>
-				  <p>Si cela répond à vos besoins commerciaux, nous pouvons porter votre application mobile afin qu'elle s'adapte facilement à n'importe navigateur web et sur n'importe quel écran. Nous connaissons toutes les interfaces, les manières d'interagir (contrôle visuel, contrôle vocal, écran interactif...) et les derniers frameworks (Appcelerator, Cordova...).</p>
-				  <p> Nous nous adaptons à votre projet pour:</p>
+				<div class="icon" data-description="<p>Nous concevons et réalisons vos applications mobiles (smartphones et tablettes) qui s'adaptent à tous les systèmes d'exploitation (Android, iOS, Windows mobile) et répondent à tous vos objectifs (applications générales B2C comme applications précises en B2B)</p>
+				  <p>Si cela répond à vos besoins commerciaux, nous pouvons porter votre application mobile afin qu'elle s'adapte facilement à n'importe quel navigateur web et sur n'importe quel écran. Nous connaissons toutes les interfaces, les manières d'interagir (contrôle visuel, contrôle vocal, écran interactif...) et les derniers frameworks (Appcelerator, Cordova...).</p>
+				  <p> Nous nous adaptons à votre projet pour :</p>
 				  <ul>
 				  <li> Réaliser un prototype de votre application et valider avec vous vos choix techniques</li>
 				  <li> Définir l'architecture, l'ergonomie et les bases du développement</li>
@@ -185,9 +185,8 @@
 			</div>
 
 			<div class="service-icons-container" data-title="Chatbots et Intelligences Artificielles">
-				<div class="icon" data-title="Chatbots et Intelligences Artificielles" data-description="<p>Nous vous aidons avec votre solution d'intelligence artificielle et pour une efficacité optimale. Nous avons une grande expérience des technologies de deep learning et d'automatisation. </p>
-                    <p>Nous vous pouvons également vous conseiller pour votre solution chatbot ou même développer une solution sur-mesure en la matière qui réponde à vos besoins.</p>
-                    ">
+				<div class="icon" data-title="Chatbots et Intelligences Artificielles" data-description="<p>Nous vous aidons avec votre solution d'intelligence artificielle pour une efficacité optimale. Nous avons une grande expérience des technologies de deep learning et d'automatisation.</p>
+                    <p>Nous vous pouvons également vous conseiller pour votre solution chatbot ou même développer une solution sur-mesure en la matière qui réponde à vos besoins.</p>">
 					<img src="images/icon_chatbot.png" alt="" class="img-responsive">
 				</div>
 				<h1> Chatbots et Intelligences Artificielles </h1>
@@ -195,8 +194,8 @@
 
 			<div class="service-icons-container" data-title="Hebergement et Maintenance">
 				<div class="icon" data-title="Hebergement et Maintenance" data-description="<p>Nous pouvons évaluer vos besoins et vous recommander le service adapté à votre système et à votre charge de fonctionnement. Puis, nous pouvons migrer vos applications et combiner les nouvelles infrastructures d'hébergement dans le cloud avec vos systèmes existants pour créer un environnement hybride mieux gérable.</p>
-                  <p> Notre expertise en matière de sécurité s'adapte à vos besoin de protection système et protection de données. Ainsi, vous pouvez préserver vos investissements existants tout en adoptant de nouveaux modèles de distribution IT pour gérer votre business, et vous préoccuper moins de sécurité. </p>
-                  <p> Nos experts adorent travailler avec: </p>
+                  <p> Notre expertise en matière de sécurité s'adapte à vos besoins de protection système et de protection de données. Ainsi, vous pouvez préserver vos investissements existants tout en adoptant de nouveaux modèles de distribution IT pour gérer votre business, et vous préoccuper moins de sécurité. </p>
+                  <p> Nos experts adorent travailler avec :</p>
                   <ul>
                       <li>Jenkins Continuous Integration et Continuous Delivery, avec Jenkins Pipelines et Functions</li>
                       <li>GitLab, pour l'hébergement des dépôts git</li>
@@ -279,7 +278,8 @@
 			</div>
 
 			<div class="service-icons-container" data-title="chatbots et intelligences artificielles" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="chatbots et intelligences artificielles" data-description="<p>Nous vous aidons avec votre solution d'intelligence artificielle et pour une efficacité optimale. Nous avons une grande expérience des technologies de deep learning et d'automatisation.</p> <p> Nous vous pouvons également vous conseiller pour votre solution chatbot ou même développer une solution sur-mesure en la matière qui réponde à vos besoins. </p>">
+				<div class="icon" data-title="chatbots et intelligences artificielles" data-description="<p>Nous vous aidons avec votre solution d'intelligence artificielle pour une efficacité optimale. Nous avons une grande expérience des technologies de deep learning et d'automatisation. </p>
+					<p>Nous vous pouvons également vous conseiller pour votre solution chatbot ou même développer une solution sur-mesure en la matière qui réponde à vos besoins.</p>">
 					<img src="images/icon_chatbot.png" alt="" class="img-responsive">
 				</div>
 				<h1> Chatbots et Intelligences Artificielles</h1>
@@ -288,7 +288,7 @@
 			<div class="service-icons-container" data-title="Hebergement et Maintenance" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-title="Hebergement et Maintenance" data-description="
 				<p>Nous pouvons évaluer vos besoins et vous recommander le service adapté à votre système et à votre charge de fonctionnement. Puis, nous pouvons migrer vos applications et combiner les nouvelles infrastructures d'hébergement dans le cloud avec vos systèmes existants pour créer un environnement hybride mieux gérable.</p>
-                  <p> Notre expertise en matière de sécurité s'adapte à vos besoin de protection système et protection de données. Ainsi, vous pouvez préserver vos investissements existants tout en adoptant de nouveaux modèles de distribution IT pour gérer votre business, et vous préoccuper moins de sécurité. </p>
+                  <p> Notre expertise en matière de sécurité s'adapte à vos besoins de protection système et de protection de données. Ainsi, vous pouvez préserver vos investissements existants tout en adoptant de nouveaux modèles de distribution IT pour gérer votre business, et vous préoccuper moins de sécurité. </p>
                   <p> Nos experts adorent travailler avec : </p>
                   <ul>
                       <li>Jenkins Continuous Integration et Continuous Delivery, avec Jenkins Pipelines et Functions</li>
@@ -439,8 +439,8 @@
 							<div class="bordered">
 								<img src="images/Engineers.png" class="img-responsive">
 								<div class="content">
-									<h2> 50+ </h2>
-									<small>  50+ Ingénieurs hautement qualifiés  </small>
+									<h2> 100+ </h2>
+									<small>  Ingénieurs hautement qualifiés  </small>
 								</div>
 							</div>
 						</div>
@@ -449,7 +449,7 @@
 								<img src="images/Coding.png" class="img-responsive">
 								<div class="content">
 									<h2> 40 000+</h2>
-									<small>  40 000+ Jours-homme de code  </small>
+									<small>  Jours-homme de code  </small>
 								</div>
 							</div>
 						</div>
@@ -458,7 +458,7 @@
 								<img src="images/happy-customer.png" class="img-responsive">
 								<div class="content">
 									<h2> 40+ </h2>
-									<small>  40+ Clients satisfaits </small>
+									<small>  Clients satisfaits </small>
 								</div>
 							</div>
 						</div>
@@ -467,7 +467,7 @@
 								<img src="images/projects-completed.png" class="img-responsive">
 								<div class="content">
 									<h2> 70+ </h2>
-									<small>  70+ Projets complétés </small>
+									<small>  Projets complétés </small>
 								</div>
 							</div>
 						</div>
@@ -484,8 +484,8 @@
 				<div class="bordered">
 					<img src="images/Engineers.png" class="img-responsive">
 					<div class="content">
-						<h2> 50+ </h2>
-						<small>  50+ Ingénieurs hautement qualifiés  </small>
+						<h2> 100+ </h2>
+						<small>  Ingénieurs hautement qualifiés  </small>
 					</div>
 				</div>
 			</div>
@@ -496,7 +496,7 @@
 					<img src="images/Coding.png" class="img-responsive">
 					<div class="content">
 						<h2> 40 000+</h2>
-						<small>  40 000+ Jours-homme de code  </small>
+						<small>  Jours-homme de code  </small>
 					</div>
 				</div>
 			</div>
@@ -507,7 +507,7 @@
 					<img src="images/happy-customer.png" class="img-responsive">
 					<div class="content">
 						<h2> 40+ </h2>
-						<small>  40+ Clients satisfaits </small>
+						<small>  Clients satisfaits </small>
 					</div>
 				</div>
 			</div>
@@ -518,7 +518,7 @@
 					<img src="images/projects-completed.png" class="img-responsive">
 					<div class="content">
 						<h2> 70+ </h2>
-						<small>  70+ Projets complétés </small>
+						<small>  Projets complétés </small>
 					</div>
 				</div>
 			</div>
