updated fr text for desktop development

--- a/fr.html
+++ b/fr.html
@@ -170,7 +170,7 @@
 			</div>
 
             <div class="service-icons-container" data-title="Developpement de Logiciels d Entreprises" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="Developpement de Logiciels d Entreprises" data-description="<p>Que vous ayez besoin d'un logiciel autonome pour une communication P2P (BitTorrent…), capable de gérer un process blockchain (type Bitcoin…) ou pour manipuler des images/de la vidéo, nous pouvons délivrer une application bureau fonctionnelle sur tous les systèmes d'exploitation.</p>
+				<div class="icon" data-title="Developpement de Logiciels d Entreprises" data-description="<p>Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
 				  <p>Nous nous adaptons à votre projet pour:</p>
 				  <ul>
 					  <li> Développer votre solution de A à Z </li>
@@ -181,7 +181,7 @@
 				  </ul>">
 					<img src="images/icon_appCycle.png" alt="" class="img-responsive">
 				</div>
-				<h1> Developpement de Logiciels d'Entreprises </h1>
+				<h1 class="logiciels"> Developpement de Logiciels d'Entreprises </h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Chatbots et Intelligences Artificielles">
@@ -263,7 +263,7 @@
 
 			<div class="service-icons-container" data-title="Developpement de logiciels d entreprises" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-title="Developpement de logiciels d entreprises" data-description="<p>
-					Que vous ayez besoin d'un logiciel autonome pour une communication P2P (BitTorrent…), capable de gérer un process blockchain (type Bitcoin…) ou pour manipuler des images/de la vidéo, nous pouvons délivrer une application bureau fonctionnelle sur tous les systèmes d'exploitation.</p>
+					Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
 				  <p>Nous nous adaptons à votre projet pour :</p>
 				  <ul>
 					  <li> Développer votre solution de A à Z </li>
