fix apostrophe causing error on hover

--- a/fr.html
+++ b/fr.html
@@ -153,7 +153,7 @@
 				<h1>Developpement <br /> Web</h1>
 			</div>
 
-			<div class="service-icons-container" data-title="Developpement d applications Mobiles">
+			<div class="service-icons-container" data-title="Developpement d#applications Mobiles">
 				<div class="icon" data-description="<p>Nous concevons et réalisons vos applications mobiles (smartphones et tablettes) qui s'adaptent à tous les systèmes d'exploitation (Android, iOS, Windows mobile) et répondent à tous vos objectifs (applications générales B2C comme applications précises en B2B)</p>
 				  <p>Si cela répond à vos besoins commerciaux, nous pouvons porter votre application mobile afin qu'elle s'adapte facilement à n'importe quel navigateur web et sur n'importe quel écran. Nous connaissons toutes les interfaces, les manières d'interagir (contrôle visuel, contrôle vocal, écran interactif...) et les derniers frameworks (Appcelerator, Cordova...).</p>
 				  <p> Nous nous adaptons à votre projet pour :</p>
@@ -163,14 +163,14 @@
 				  <li> Développer votre application selon les indications que vous aurez validé</li>
 				  <li> Publier votre application sur les stores</li>
 				  <li> S'occuper de votre maintenance applicative et vous accompagner dans vos futures évolutions </li>
-              </ul>" data-title="Developpement d applications Mobiles">
+              </ul>" data-title="Developpement d#applications Mobiles">
 					<img src="images/icon_mobileDev.png" alt="" class="img-responsive">
 				</div>
 				<h1>Developpement d'applications Mobiles</h1>
 			</div>
 
-            <div class="service-icons-container" data-title="Developpement de Logiciels d Entreprises" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="Developpement de Logiciels d Entreprises" data-description="<p>Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
+            <div class="service-icons-container" data-title="Developpement de Logiciels d#Entreprises" data-toggle="modal" data-target="#modalServices">
+				<div class="icon" data-title="Developpement de Logiciels d#Entreprises" data-description="<p>Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
 				  <p>Nous nous adaptons à votre projet pour:</p>
 				  <ul>
 					  <li> Développer votre solution de A à Z </li>
@@ -255,14 +255,14 @@
 				  <li> Développer votre application selon les indications que vous aurez validé</li>
 				  <li> Publier votre application sur les stores</li>
 				  <li> S'occuper de votre maintenance applicative et vous accompagner dans vos futures évolutions </li>
-				  </ul>" data-title="developpement d applications mobiles">
+			  </ul>" data-title="developpement d#applications mobiles">
 					<img src="images/icon_mobileDev.png" alt="" class="img-responsive">
 				</div>
 				<h1>Developpement d'Applications Mobiles</h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Developpement de logiciels d entreprises" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="Developpement de logiciels d entreprises" data-description="<p>
+				<div class="icon" data-title="Developpement de logiciels d#entreprises" data-description="<p>
 					Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
 				  <p>Nous nous adaptons à votre projet pour :</p>
 				  <ul>
