updated fr text

--- a/fr.html
+++ b/fr.html
@@ -170,7 +170,7 @@
 			</div>
 
             <div class="service-icons-container" data-title="Developpement de Logiciels d#Entreprises" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="Developpement de Logiciels d#Entreprises" data-description="<p>Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
+				<div class="icon" data-title="Developpement de Logiciels d#Entreprises" data-description="<p>Quel que soit votre besoin logiciel pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site, sur serveur, ordinateur personnel ou mobile.</p>
 				  <p>Nous nous adaptons à votre projet pour:</p>
 				  <ul>
 					  <li> Développer votre solution de A à Z </li>
@@ -263,7 +263,7 @@
 
 			<div class="service-icons-container" data-title="Developpement de logiciels d entreprises" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-title="Developpement de logiciels d#entreprises" data-description="<p>
-					Que vous ayez besoin de logiciels pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site ou sur serveur, ordinateur personnel ou mobile.</p>
+					Quel que soit votre besoin logiciel pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site, sur serveur, ordinateur personnel ou mobile.</p>
 				  <p>Nous nous adaptons à votre projet pour :</p>
 				  <ul>
 					  <li> Développer votre solution de A à Z </li>
