added vitagora logo

--- a/index.html
+++ b/index.html
@@ -555,8 +555,11 @@
 	                <img src="images/logo/webdrone.png" class="img-responsive">
 	            </div>
 				<div class="col-6 col-md-3 .offset-md-3 logo">
-	                <img src="images/logo/logo-docapost-poste-OK.png" class="img-responsive">
-	            </div>
+	      	<img src="images/logo/logo-docapost-poste-OK.png" class="img-responsive">
+	      </div>
+				<div class="col-6 col-md-3 .offset-md-3 logo">
+	      	<img src="images/logo/Logo-vitagora.jpg" class="img-responsive">
+	      </div>
 			</div>
         </div>
 	</section>
