Added Manaty research page

--- a/index.html
+++ b/index.html
@@ -120,12 +120,21 @@
 		</div>
 		<!-- browser -->
 		<div class="services-icons d-none d-md-block">
+			<a href="/research-group/en" target="_blank">
+				<div class="service-icons-container" data-title="Scientific Research" >
+					<div class="icon" data-description="<p>Scientific Research</p>"
+					    data-title="Scientific Research">
+						<img src="images/icon_research.png" alt="" class="img-responsive">
+					</div>
+					<h1> Scientific Research</h1>
+				</div>
+			<a>
 			<div class="service-icons-container" data-title="Studies, conception & proofs of concept" >
 				<div class="icon" data-description="<p>  Manaty federates more than thirty specialists of software development around the world. Most of them are seniors with more than 10 years of experience with both technical and functional expertise in various fields (Java, JavaScript, PHP, Android, iOs; SQL and NoSQL, Reporting, data mining,  Cloud solutions…) and industries (Telecom, Media, Finance, Retail, Health…). </p>  <p> Some of our experts are PhD researchers that can offer their services and knowledge for your research and study needs. We can counsel you or even realize a complete and precise study on your subject.  </p>  <p>  We received a french certification for R&D studies that is valid until 2019 (certification CIR).</p>"
 				    data-title="Studies, conception & proofs of concept">
 					<img src="images/icon_software.png" alt="" class="img-responsive">
 				</div>
-				<h1> Studies, Conception & Proofs of Concept</h1>
+				<h1 style="font-size: 1.1em;"> Studies, Conception & Proofs of Concept</h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Website Development">
@@ -209,6 +218,22 @@
 		</div>
 		<!-- mobile version-->
 		<div class="services-icons d-col-block d-md-none">
+			<a href="/research-group/en" target="_blank">
+				<div class="service-icons-container" data-title="Scientific Research" >
+					<div class="icon" data-description="<p>Scientific Research</p>"
+					    data-title="Scientific Research">
+						<img src="images/icon_research.png" alt="" class="img-responsive">
+					</div>
+					<h1> Scientific Research</h1>
+				</div>
+			<a>
+			<div class="service-icons-container" data-title="Scientific Research" data-toggle="modal" data-target="#modalServices">
+				<div class="icon" data-description="<p>  Scientific Research</p>"
+				    data-title="Scientific Research">
+					<img src="images/icon_research.png" alt="" class="img-responsive">
+				</div>
+				<h1> Scientific Research</h1>
+			</div>
 			<div class="service-icons-container" data-title="Studies, conception & proofs of concept" data-toggle="modal" data-target="#modalServices">
 				<div class="icon" data-description="<p>  Manaty federates more than thirty specialists of software development around the world. Most of them are seniors with more than 10 years of experience with both technical and functional expertise in various fields (Java, JavaScript, PHP, Android, iOs; SQL and NoSQL, Reporting, data mining,  Cloud solutions…) and industries (Telecom, Media, Finance, Retail, Health…). </p>  <p> Some of our experts are PhD researchers that can offer their services and knowledge for your research and study needs. We can counsel you or even realize a complete and precise study on your subject.  </p>  <p>  We received a french certification for R&D studies that is valid until 2019 (certification CIR).</p>"
 				    data-title="Studies, conception & proofs of concept">
