Added pdf file for the research paper

--- a/groupe-de-recherche/fr.html
+++ b/groupe-de-recherche/fr.html
@@ -134,7 +134,7 @@
       <div class="text-container">
         <h1 class="darkgreen">PUBLICATIONS</h1>
       </div>
-        <a href="#" download>Academic Papers</a>
+        <a target="_blank" href="../Physical_and_mathematical_consistency_of_the_Janus_Cosmological_Model.pdf" download>Physical and mathematical consistency of the Janus Cosmological Model (JCM)</a>
     </div>
   </section>
 
