Added client testimonial section

--- a/fr.html
+++ b/fr.html
@@ -578,6 +578,36 @@
         </div>
 	</section>
 	<!-- END CLIENTS SECTION -->
+
+	<!-- TESTIMONIALS SECTION -->
+	<section class="testimonials">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-md-3 logo">
+	         <img src="images/logo/centre_ivestigation_clinique_besancon_logo.png" class="img-responsive">
+	      </div>
+				<div class="col-12 col-md-9">
+					<div class="container">
+						<div class="row">
+							<div class="col-3 col-md-2 photo-container">
+									<img src="images/logo/damien_gabriel.png" class="photo">
+							</div>
+							<div class="col-9 col-md-10">
+								<span class="testimonials-name">Damien Gabriel, docteur en Neurosciences</span>
+								<p>Ingénieur d'étude au centre d'investigation Clinique Inserm CIC 1431 et responsable de la plateforme de neuroimagerie fonctionnelle et neurostimulation Neuraxess.</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="testimonial-text">
+								"Pour l'un de nos projets de neurosciences, nous avions besoin d'être accompagnés pour la création d'un logiciel innovant de mesure synchrone de l'activité cérébrale. Nous sommes très satisfaits du niveau d’expertise apporté par les experts Manaty, tant sur les aspects de conseil technique ou fonctionnel, et espérons poursuivre notre collaboration pour le développement de futurs projets."
+							</div>
+						</div>
+					</div>
+	      </div>
+			</div>
+		</div>
+	</section>
+	<!-- END TESTIMONIALS SECTION -->
 	<script type="text/javascript">var submitted=false;</script>
 	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {resetForms()}"></iframe>
 
