--- a/groupe-de-recherche/fr.html
+++ b/groupe-de-recherche/fr.html
@@ -102,7 +102,7 @@
             <img class="researcher-photo" src="../images/researchers/gilles-d-agestini-pic.jpg">
           </div>
           <div class="col-md-9 col-sm-6">
-            <div class="researcher-info-container"><strong>Gilles d'Agestini</strong>: Docteur en physique des Hautes énergies</div>
+            <div class="researcher-info-container"><strong>Gilles d'Agostini</strong>: Docteur en physique des Hautes énergies</div>
             <div class="researcher-qualifications">
               <ul>
                 <li>Mathématiques</li>
