--- a/research-group/en.html
+++ b/research-group/en.html
@@ -102,7 +102,7 @@
             <img class="researcher-photo" src="../images/researchers/gilles-d-agestini-pic.jpg">
           </div>
           <div class="col-md-9 col-sm-6">
-            <div class="researcher-info-container"><strong>Gilles d'Agestini</strong>: Doctor in Physics and High Energy</div>
+            <div class="researcher-info-container"><strong>Gilles d'Agostini</strong>: Doctor in Physics and High Energy</div>
             <div class="researcher-qualifications">
               <ul>
                 <li>Mathematics</li>
