add blockchain expertise

--- a/fr.html
+++ b/fr.html
@@ -152,19 +152,18 @@
 				<h1>Developpement d'applications Mobiles</h1>
 			</div>
 
-            <div class="service-icons-container" data-title="Developpement de Logiciels d#Entreprises" data-toggle="modal" data-target="#modalServices">
-				<div class="icon" data-title="Developpement de Logiciels d#Entreprises" data-description="<p>Quel que soit votre besoin logiciel pour automatiser vos processus d'entreprise, analyser vos données, gérer une blockchain... Nous pouvons développer une solution fonctionnant sur le cloud, sur site, sur serveur, ordinateur personnel ou mobile.</p>
-				  <p>Nous nous adaptons à votre projet pour:</p>
+            <div class="service-icons-container" data-title="Expertise BLockchain" data-toggle="modal" data-target="#modalServices">
+				<div class="icon" data-title="Expertise Blockchain" data-description="<p>De la conception au deploiement de blockchains privées ou publiques. Manaty offre son expertise en audit et conception de smart-contracts.</p>
+				  <p>Nous apportons notre expertise pour:</p>
 				  <ul>
-					  <li> Développer votre solution de A à Z </li>
-					  <li> Vous conseiller sur les meilleures technologies à utiliser à chaque étape</li>
-					  <li> Vous proposer un plan qualité sérieux</li>
-					  <li> Former votre équipe et s'assurer que vous maitriser votre nouvelle solution</li>
-					  <li> Vous accompagner dans vos futures évolutions et vous faire une offre de maintenance intéressante</li>
+					  <li> Vous aider a choisir la techologie de blochain la plus adaptée a votre besoin</li>
+					  <li> Développer des smart-contracts </li>
+					  <li> Auditer vos smart-contracts</li>
+					  <li> Mettre en place et exploiter une blokchaine publique ou privée</li>
 				  </ul>">
 					<img src="images/icon_appCycle.png" alt="" class="img-responsive">
 				</div>
-				<h1 class="logiciels"> Developpement de Logiciels d'Entreprises </h1>
+				<h1 class="logiciels"> Expertise Blockchain </h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Chatbots et Intelligences Artificielles">
