--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				  </ul>">
 					<img src="images/icon_appCycle.png" alt="" class="img-responsive">
 				</div>
-				<h1 class="logiciels"> Expertise Blockchain </h1>
+				<h1 class="logiciels">Blockchain Expertise</h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Chatbot and AI">
