--- a/en.html
+++ b/en.html
@@ -151,19 +151,18 @@
 				<h1>Mobile Development</h1>
 			</div>
 
-			<div class="service-icons-container" data-title="Desktop Development">
-				<div class="icon" data-title="Desktop Development" data-description="<p>Whether you need a standalone software for peer 2 peer communication (BitTorrent…), a blockchain processing (Bitcoins…) or an images/video processing, we can deliver multi-OS easy to deploy desktop applications.</p>
-				  <p>We adapt to your project to :</p>
+			<div class="service-icons-container" data-title="BLockchain Expertise" data-toggle="modal" data-target="#modalServices">
+				<div class="icon" data-title="Blockchain Expertise" data-description="<p>From conception to deployment of private and public blockchains. Manaty offers its expertise in creating and auditing smart-contracts.</p>
+				  <p>We bring our expertise to:</p>
 				  <ul>
-					  <li> Develop your solution from A to Z </li>
-					  <li> Counsel you on the best technologies to use at every step</li>
-					  <li> Provide you with serious QA</li>
-					  <li> Train your teams and ensure that you master your new solution</li>
-					  <li> Maintain your solution and accompany you for future evolutions</li>
+					  <li> Help you choose the right blockchain technology for your needs</li>
+					  <li> Develop smart-contracts</li>
+					  <li> Audit your smart-contracts</li>
+					  <li> Setup and maintain both private and public blockchain</li>
 				  </ul>">
 					<img src="images/icon_appCycle.png" alt="" class="img-responsive">
 				</div>
-				<h1> Desktop Development </h1>
+				<h1 class="logiciels">Blockchain Expertise</h1>
 			</div>
 
 			<div class="service-icons-container" data-title="Chatbot and AI">
