--- a/en.html
+++ b/en.html
@@ -669,7 +669,7 @@
 					<div class="col-12 d-col-block d-md-none">
 						<div class="contact-info">
 							<div class='contact-info-row'>
-								<i class="material-icons">local_phone</i> +(33) 9 70 40 62 65
+								<i class="material-icons">local_phone</i> +(33) 6 17 43 71 seventeen
 							</div>
 						</div>
 					</div>
