--- a/fr.html
+++ b/fr.html
@@ -662,7 +662,7 @@
 						<div class="row">
 							<div class="contact-info">
 								<div class='contact-info-row'>
-									<i class="material-icons">local_phone</i> +(33) 9 70 40 62 65
+									<i class="material-icons">local_phone</i> +(33) 6 17 43 71 dix-sept
 								</div>
 							</div>
 						</div>
@@ -708,7 +708,7 @@
 					<div class="col-12 d-col-block d-md-none">
 						<div class="contact-info">
 							<div class='contact-info-row'>
-								<i class="material-icons">local_phone</i> +(33) 9 70 40 62 65
+								<i class="material-icons">local_phone</i> +(33) 6 17 43 71 dix-sept
 							</div>
 						</div>
 					</div>
