--- a/fr.html
+++ b/fr.html
@@ -161,7 +161,7 @@
 					  <li> Auditer vos smart-contracts</li>
 					  <li> Mettre en place et exploiter une blokchaine publique ou privée</li>
 				  </ul>
-					<a href="https://www.credential.net/c590c184-1b67-4de7-9c40-1dec2a2823a5"><img src="https://badges.images.credential.net/1562829792308239.png" alt="" class="img-responsive"></a>
+					<a href="https://www.credential.net/c590c184-1b67-4de7-9c40-1dec2a2823a5"><img src="images/icon_blockChainExpertise.png" alt="" class="img-responsive"></a>
 				</div>
 				<h1 class="logiciels"> Expertise Blockchain </h1>
 			</div>
